...
                                shadowEnabled = shadowEnabled, shadowElevation = shadowElevation,
                                shadowShapeRadius = shadowShapeRadius, fontSize = keyFontSize)
                        }
                    }
                }
            }
            Column(Modifier.weight(0.8f).fillMaxHeight().testTag("number-actions")) {
                SwipeableIconKeyButton(
                    icon = rememberVectorPainter(Icons.AutoMirrored.Filled.Backspace),
                    onClick = { onKeyPress("delete") }, backgroundColor = specialKeyBackgroundColor,
                    iconColor = specialKeyTextColor, modifier = Modifier.weight(1f).testTag("number-delete-key"),
                    swipeText = "清空", onSwipe = { onKeyPress("clear_composition") },
                    onLongClick = { onKeyPress("delete") }, onPress = { onKeyPressDown?.invoke("delete") },
...
